feat: Implement sync command (#39)
* feat: Register new sync command

* feat: Add stubbed Syncer component

* fix: Make Fields an array in the API

* fix: Fix fields mask for fields with json tags omitempty

* feat(sync): Collect source items from source

* chore: Set client timeout in sync command

* refactor: Replace client package with client generated in api

* feat(api): Add HashItem function which includes the properties and metadata

* feat(sync): Add createUpsertSlice func in Syncer

* refactor(api): Make delete_time mutable from upsert and create endpoint

* test(sync): Add unit tests for Syncer
