# openapi.yaml
@@ -42,7 +42,9 @@ paths:
           in: query
           required: false
           schema:
-            type: string
+            type: array
+            items:
+              type: string
           explode: false
       responses:
         '200':
@@ -177,7 +179,6 @@ components:
         - content
         - create_time
         - update_time
-        - delete_time
         - properties
         - metadata
         - hash
@@ -197,7 +198,6 @@ components:
         delete_time:
           type: string
           format: date-time
-          readOnly: true
         properties:
           type: object
           additionalProperties: {}
@@ -232,6 +232,9 @@ components:
         update_time:
           type: string
           format: date-time
+        delete_time:
+          type: string
+          format: date-time
         properties:
           type: object
           additionalProperties: {}
@@ -250,6 +253,9 @@ components:
           type: string
           format: date-time
         update_time:
+          type: string
+          format: date-time
+        delete_time:
           type: string
           format: date-time
         properties:
@@ -280,6 +286,9 @@ components:
           type: string
           format: date-time
         update_time:
+          type: string
+          format: date-time
+        delete_time:
           type: string
           format: date-time
         properties:
